[package]
name = "rust-sockets"
version = "0.1.0"
authors = ["James Gowans <jgowans@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["os-poll", "uds"] }
uds = { version = "0.2.1", features=["mio_07"] }
